# scqubits

./: .gitignore  CIRCUIT_ARCHITECTURE.md  CIRCUIT_DEVELOPER_MANUAL.md  CIRCUIT_REFACTOR_STATUS.md  CITATION.bib  CITATION.cff  CLAUDE.md  CONVERGENCE_DEVELOPER_MANUAL.tex  CONVERGENCE_OVERVIEW.tex  Fluxonium-v2.ipynb  LICENSE  LINCENSE.md  MANIFEST.in  README.md  REFACTORING_PLAN.md  REFACTORING_RESULT.md  Scqubits.ipynb  TODO.md  VERIFY_REFACTOR.md  asv.conf.json  azure-pipelines.yml  config.py  demo_flux_qubit.ipynb  docstring_fixer.py  dummy.txt  environment.yml  index.json  info.json  meta.yaml  modernize_types.py  operators.py  optional-requirements.txt  plotting.py  progress_bar.py  pyproject.toml  qutip-usage-report.md  readthedocs.yml  regressions.xml  requirements-conda-py37_py38.txt  requirements-conda.txt  (+12 more)
.github/ISSUE_TEMPLATE/: bug_report.md  ideas--suggestions--feature-requests.md  other-issues.md
.github/workflows/: asv.yml  autotune-linux-probe.yml  black-check-latest.yml  black-check-legacy.yml  black-check.yml  docstring-lint.yml  main.yml  mamba-install-and-run-pytests.yml  mypy.yml  pytest.yml  pytest.yml.bak  python-package-conda-test.yml  python-package-conda.yml  pythonpackage.yml  pythonpublish.yml
GUI_develop/: InteractiveGUIClass-ZeroPi.ipynb  Test.ipynb
GUI_develop/.ipynb_checkpoints/: InteractiveGUIClass-ZeroPi-checkpoint.ipynb  Test-checkpoint.ipynb
benchmarks/: asvconftest.py  benchmarks.py
benchmarks/asvbenchmarks/: transmon.py
demo notebooks/: 08302021_Bufluxon_and_cos2phi.ipynb  20200328_Bifluxon_comparison_with_expt.ipynb  20210714_Bifluxon_adding_junction_EJ_disorder.ipynb  20210717_Bifluxon_adding_junction_EJ_disorder.ipynb  20210721_Bifluxon_circuit_QED.ipynb  scqubits_tests.ipynb
demo notebooks/.ipynb_checkpoints/: 20210717_Bifluxon_adding_junction_EJ_disorder-checkpoint.ipynb
demo notebooks/Bifluxon/: 20210721_Bifluxon_vs_0_pi.ipynb
demo notebooks/SNAIL/: 20220710_SNAIL_comparison_with_Danny.ipynb  20220710_SNAIL_tests.ipynb  20220805_SNAIL_single_node_full_ckt_comparison.ipynb
docs/: README.md  left_over.rst  requirements.txt
docs/source/: acknowledgments.rst  bibliography.rst  changelog.rst  conf.py  contributors.rst  index.rst  installation.rst
example/: AnalyzeQCircuit_Fluxonium_Example.ipynb  fluxonium_num.inp  fluxonium_sym.inp
examples/: CM_tests.py  FQ_tests.py  ZP_tests.py  demo_CM_vchos.ipynb  demo_current_mirror.ipynb  demo_dcp.ipynb  demo_dcpl.ipynb  demo_explorer.ipynb  demo_explorer_TESTING.ipynb  demo_flux_qubit.ipynb  demo_fluxonium.ipynb  demo_fluxonium_TESTING.ipynb  demo_hilbertspace.ipynb  demo_hilbertspace_TESTING1.ipynb  demo_noise.ipynb  demo_rhombus.ipynb  demo_tight_binding.ipynb  demo_transmon.ipynb  demo_zeropi.ipynb  demo_zeropifull.ipynb  discretized_basis.ipynb  flux_qubit_circuit.ipynb  flux_qubit_vchos_demonstration.ipynb  read-h5-file.nb  testing.ipynb
examples/data/: spectrum_vs_ng.hdf5
examples/ipynb/: basics.html  basics.ipynb  explorer.html  explorer.ipynb  hilbertspace.html  parallel.html  parallel.ipynb
examples/ipynb_2/: hilbertspace.ipynb  parallel.ipynb
graphs/summary/: asv_noise.Test_effective_scan.time_fluxonium_t2_effective_scan.json  asv_noise.Test_effective_scan.time_transmon_t2_effective_scan.json  asv_noise.Test_effective_scan.time_zeropi_t2_effective_scan.json  asvbenchmark_qubits.TestQubit.time_FullZeroPi_get_spectrum_vs_paramvals.json  asvbenchmark_qubits.TestQubit.time_ZeroPi_get_spectrum_vs_paramvals.json  asvbenchmark_qubits.TestQubit.time_cos2phi_get_spectrum_vs_paramvals.json  asvbenchmark_qubits.TestQubit.time_fluxonium_get_spectrum_vs_paramvals.json  asvbenchmark_qubits.TestQubit.time_fluxqubit_get_spectrum_vs_paramvals.json  asvbenchmark_qubits.TestQubit.time_transmon_get_spectrum_vs_paramvals.json  asvbenchmark_qubits.TestQubit.time_tunabletransmon_get_spectrum_vs_paramvals.json
sc_qubits/: __init__.py  settings.py  testing.py
sc_qubits/core/: data_containers.py  discretization.py  flux_qubit.py  fluxonium.py  harmonic_osc.py  hilbert_space.py  operators.py  qubit_base.py  transmon.py  zeropi.py  zeropi_full.py
sc_qubits/examples/: demo_hilbertspace.ipynb  read-h5-file.nb
sc_qubits/sc_qubits/: __init__.py  settings.py  testing.py
sc_qubits/tests/: test_fluxonium.py  test_hilbertspace.py  test_transmon.py  (+3 more)
scqubits/: TODO_NOISE.txt  __init__.py  settings.py  testing.py
scripts/: restructure_circuit_subdir.py
tools/: BENCHMARKS.md  README.md  autotune_decisions.py  autotune_multiprocessing.py  autotune_timing.py  benchmark_multiprocessing.py  convergence_validation.py  docstring_lint.py  test_docstring_lint.py
(+477 files in other folders)
