[build-system]
requires = ["setuptools", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

# Use setuptools_scm to generate version from Git tags
[tool.setuptools_scm]
write_to = "scqubits/version.py"
version_scheme = "only-version"

[project]
name = "scqubits"
description = "scqubits: superconducting qubits in Python"
dynamic = ["version"]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "Jens Koch", email = "jens-koch@northwestern.edu" },
    { name = "Peter Groszkowski", email = "piotrekg@gmail.com" },
]
keywords = [
    "qubits",
    "superconducting",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "cycler",
    "dill",
    "pathos>=0.3.0",
    "matplotlib>=3.5.1",
    "numpy>=1.14.2",
    "pathos>=0.3.0",
    "qutip>=4.3.1",
    "scipy>=1.5 ; sys_platform != 'darwin'",
    "scipy>=1.5,<=1.13.1 ; sys_platform == 'darwin'",
    "sympy",
    "tqdm",
    "typing_extensions",
]

[project.optional-dependencies]
gui = [
    "ipywidgets (>=7.5)", "ipyvuetify", "matplotlib-label-lines (>=0.3.6)", "h5py (>=2.10)",
]
develop = [
    "pytest", "traitlets", "h5py (>=2.10)",
]

[project.urls]
Homepage = "https://scqubits.readthedocs.io"
Repository = "https://github.com/scqubits/scqubits"

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
no_implicit_optional = true

# Third-party packages without type stubs on PyPI (checked 2026-04-18):
# - qutip, sympy, dill, h5py, pathos, ipywidgets, ipyvuetify, labellines,
#   matplotlib_inline, mpl_toolkits.axes_grid1, mpl_toolkits.mplot3d
# For tqdm, types-tqdm is installed via develop extras.
# For matplotlib overall, no good stubs exist (unofficial matplotlib-stubs
# has too many coverage gaps — causes more false positives than it fixes).
[[tool.mypy.overrides]]
module = [
    "dill",
    "dill.*",
    "h5py",
    "h5py.*",
    "ipyvuetify",
    "ipyvuetify.*",
    "ipywidgets",
    "ipywidgets.*",
    "labellines",
    "labellines.*",
    "matplotlib_inline",
    "matplotlib_inline.*",
    "mpl_toolkits.*",
    "pathos",
    "pathos.*",
    # Optional acceleration backends imported inside diag.py fallbacks
    "primme",
    "cupy",
    "cupy.*",
    "cupyx.*",
    "jax",
    "jax.*",
    "qutip",
    "qutip.*",
    "sympy",
    "sympy.*",
]
ignore_missing_imports = true
